--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
     "declaration": true,
     "outDir": "./dist",
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "esModuleInterop": true
   },
   "include": [
