--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
-      "npm run lint", "git add"
+      "npm run lint",
+      "git add"
     ]
   },
   "dependencies": {
-    "pixi.js": "5.3.7",
     "@tweenjs/tween.js": "18.6.4",
-    "lodash": "4.17.20"
+    "lodash": "4.17.20",
+    "pixi.js": "5.3.7",
+    "pixi.js-legacy": "^5.3.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
